--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@
 
     /* Gradients */
     --gradient-primary: linear-gradient(135deg, rgb(0, 88, 175) 0%, rgb(164, 214, 247) 100%);
-    --gradient-light:linear-gradient(135deg, rgba(0, 88, 175, 0.4) 0%, rgba(164, 214, 247, 0.4) 100%), url('img/hero-img.jpg');
+    --gradient-light:linear-gradient(135deg, rgba(0, 88, 175, 0.4) 0%, rgba(164, 214, 247, 0.4) 100%), url('../img/hero-img.jpg');
     --gradient-overlay: linear-gradient(180deg, transparent 0%, rgba(0, 0, 0, 0.8) 100%);
 
     /* Transitions */
